Fix menu expand/collapse #3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4169,7 +4169,7 @@ div.table-wrapper {
     margin: 0; }
     .vertical-menu .nav li.parent ul li a {
       color: #8b95a7;
-      padding: 0.5rem 4rem; }
+      padding: 0.5rem 2rem 0.5rem 2.8rem; }
     .vertical-menu .nav li.parent ul.visible {
       display: inline; }
 
