--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -76,7 +76,7 @@
 
     li a {
       color: $gray-3;
-      padding: 0.5rem 4rem;
+      padding: 0.5rem 2rem 0.5rem 2.8rem;
     }
 
     &.visible {
